# smart-todo

./: .gitignore  CLAUDE.md  kanban-design.md  kanban-review.md  smart-todo-design.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  docker-compose.yml  package-lock.json  package.json
backend/.claude/: settings.local.json
backend/docs/: smtp-setup.md
backend/src/: app.module.ts  main.ts
backend/src/common/filters/: http-exception.filter.ts
backend/src/config/: database.config.ts
backend/src/modules/ai/: ai.service.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/modules/task/: task.controller.ts  task.entity.ts  task.module.ts  task.service.ts
smart-todo/: index.html  mini.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
smart-todo/backend/: database.sqlite  package-lock.json  package.json
smart-todo/backend/src/: app.module.ts  main.ts
smart-todo/backend/src/analytics/: analytics.controller.ts  (+2 more)
smart-todo/src/: App.tsx  mini.tsx
smart-todo/src-tauri/: Cargo.toml  tauri.conf.json
smart-todo/src-tauri/capabilities/: default.json
smart-todo/src-tauri/icons/: icon.icns
smart-todo/src/app/: providers.tsx  routes.tsx
smart-todo/src/hooks/: useChatHandler.ts  useDoingTimer.ts  useMediaQuery.ts
smart-todo/src/lib/: http.ts  window.ts
smart-todo/src/pages/: Analytics.tsx  Calendar.tsx  Home.tsx  Inbox.tsx  Login.tsx  Settings.tsx
smart-todo/src/styles/: globals.css
smart-todo/src/types/: auth.ts  index.ts
smart-todo/src/utils/: date.ts
(+71 files in other folders)
